various minor updates

--- a/public/index.html
+++ b/public/index.html
@@ -91,11 +91,43 @@
             <p><strong>Software Engineer</strong><br>
                August 2023 - Present | Seattle, WA<br>
                <a href="https://www.f5.com/">Link to company</a>
+            </p>
             <p><strong>Tools & Technologies:</strong> Python, Docker, GitSwarm, Selenium, Linux</p>
             <ul>
-               <li>
-                  Supporting F5’s next-gen rSeries and VELOS products as a member of the Velocity System Integration team.
-               </li>
+               <li>Member of the Velocity System Integration team supporting F5’s next-generation rSeries and VELOS products.</li>
+            </ul>
+            <p><strong>Accomplishments:</strong></p>
+            <ul>
+               <li>Developed 60+ new Python integration tests for F5OS or BIG-IP products.</li>
+               <li>These tests & scripts that I independently wrote and designed have been run 50,000+ times across various pipelines.</li>
+               <li>Added 100+ new methods to core libraries.</li>
+               <li>Found & filed 50+ product bugs; verified fixes for 100+ bugs.</li>
+               <li>Architected high-priority test pipeline integrations requiring collaboration across teams.</li>
+               <li>Recognized through BEF5 Recognition program 10 times over the span of the first year.</li>
+            </ul>
+            <p><strong>Test Development and Maintenance:</strong></p>
+            <ul>
+               <li>Covered features including Modular BIG-IP tenant (Next), High-Availability Testing, Classic BIG-IP tenant testing (CBIP), OS installations, orchestration (docker, kubernetes, openshift), F5OS API (restconf), traffic performance, GUI testing, FPGAs, DDM, DAG Testing, and authentication/security.</li>
+            </ul>
+            <p><strong>Build Verification Pipeline:</strong></p>
+            <ul>
+               <li>Played a key role in developing a new build verification pipeline required for all F5OS developers.</li>
+               <li>Implemented an automated recovery process for build verification pipeline failures.</li>
+               <li>Became an SME in test pipeline template JSON development and maintenance.</li>
+               <li>Debugged complex log files of failed build pipelines, determining root causes and fixing automation quickly.</li>
+            </ul>
+            <p><strong>Internal Tool Development:</strong></p>
+            <ul>
+               <li>Created multiple dashboards for monitoring device health and build pipeline results.</li>
+               <li>Deployed these dashboards as Dockers created with JS/HTML, Python/Flask, and SQL DB.</li>
+               <li>Built tools to visualize pipeline failures and known bugs.</li>
+               <li>These dashboards were self-initiated projects to speed up manual work.</li>
+            </ul>
+            <p><strong>New Skills:</strong></p>
+            <ul>
+               <li>Learned the rSeries & VELOS products by spending countless hours in the F5OS shell & CLI debugging networking, hardware, OS installation, kubernetes/docker issues, and more.</li>
+               <li>Learned how to setup & debug traffic between systems, switches, & hypervisors.</li>
+               <li>Became skilled at using Postman for API testing and new test automation development.</li>
             </ul>
             </p> 
             <h2 class="major">VS&Co.</h2>
@@ -105,11 +137,7 @@
                May 2023 – August 2023 | Remote<br />
             <p><strong>Tools & Technologies:</strong> Go, Azure, Kubernetes, Docker, CouchDB, MongoDB, Consul, Grafana</p>
             <ul>
-               <li>Supported 100+ Go microservices within an Azure Kubernetes Services environment.
-               <li>Optimized a core service’s performance by transitioning blacklisted user storage from array to map structure,
-                  achieving 100x to 1000x faster data lookups. 
-               </li>
-               <li>Leveraged CouchDB and Consul for local testing of updates.</li>
+               <li>Member of VS Digital team supporting 100+ Go microservices within an Azure Kubernetes Services environment.
             </ul>
             <strong>Credit/Payments Applications Developer Intern</strong><br />
             Aug 2022 – April 2023 | Remote<br />
@@ -125,8 +153,7 @@
             <br />
             <p><strong>Tools & Technologies:</strong> C#, SQL, .NET, WPF, Bitbucket </p>
             <ul>
-               <li>Assisted development of new merchandise planning application, boosting productivity for hundreds of staff</li>
-               <li>Created data in MS SQL for quality assurance testing of planning app and validated APIs using SwaggerHub.</li>
+               <li>Worked on development of new merchandise planning application.</li>
             </ul>
             <p> <a href="https://www.victoriassecret.com/">Link to Company</a></p>
             <h2 class="major">Informa Software</h2>
@@ -510,6 +537,7 @@
                <button id="fetch-joke-btn">Fetch Joke</button>
             </div>
             <!-- ChatBot -->
+            <!--
             <h2 class="major">Chat bot</h2>
             <div class="chat-widget">
                <div class="chat-messages" id="chat-messages"></div>
@@ -518,6 +546,7 @@
                   <button type="submit">Send</button>
                </form>
             </div>
+            -->
             <!-- NASA APOD -->
             <h2 class="major">NASA Daily Pic</h2>
             <div id="nasa-apod" class="widget"></div>
@@ -530,10 +559,12 @@
                <button id="todaysFactBtn">Get Today's Useless Fact</button>
             </div>
             <!-- Google Maps -->
+            <!--
             <h2 class="major">Google Maps</h2>
             <div id="google-maps-widget" class="widget">
                <div id="map" style="height: 400px; width: 100%;"></div>
             </div>
+            -->
             <!-- Sports Scoreboard -->
             <h2 class="major">Recent Texas Games</h2>
             <div id="sports-scoreboard-widget" class="widget" style="display: flex; flex-direction: column;">
