--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
                August 2023 - Present | Seattle, WA<br>
                <a href="https://www.f5.com/">Link to company</a>
             </p>
-            <p><strong>Tools & Technologies:</strong> Python, Docker, GitSwarm, Selenium, Linux</p>
+            <p><strong>Tools & Technologies:</strong> Python, Docker, Kubernetes, Linux, GitSwarm </p>
             <ul>
                <li>Member of the Velocity System Integration team supporting F5’s next-generation rSeries and VELOS products.</li>
             </ul>
