work experience updateS

--- a/public/index.html
+++ b/public/index.html
@@ -87,46 +87,54 @@
          <article id="WorkExperience">
             <h2 class="major">F5</h2>
             <span class="image main"><img src="images/F5.png" alt="" /></span>
-            <p><strong>Software Engineer</strong><br>
-               August 2023 - Present | Seattle, WA<br>
+            <p><strong>Software Engineer II</strong><br>
+               December 2024 - Present | Seattle, WA (Hybrid)<br>
+               <strong>Software Engineer I</strong><br>
+               August 2023 - December 2024<br>
                <a href="https://www.f5.com/">Link to company</a>
             </p>
-            <p><strong>Tools & Technologies:</strong> Python, Docker, Kubernetes, Linux, GitSwarm </p>
+            <p><strong>Tools & Technologies:</strong> Python, Docker, Kubernetes, Linux, GitSwarm, REST/RESTCONF APIs, Flask, JavaScript, SQL, Postman</p>
+            <p><strong>Current Role Highlights (SE II):</strong></p>
             <ul>
-               <li>Member of the Velocity System Integration team supporting F5’s next-generation rSeries and VELOS products.</li>
+               <li>Architected and implemented the API and Web UI for the new BVT Orchestration Service, improving the build verification pipeline experience for F5OS developers and test maintainers with better pre-merge submission, failure triage, and trend visualization capabilities.</li>
+               <li>Leading F5OS integration testing and automation development for the BIG-IP Next (as a VM) project.</li>
+               <li>Ownership of F5OS x BIG-IP TMOS Tenant High Availability Traffic Automation execution and triage.</li>
+               <li>Supporting development teams in the migration from CentOS to Rocky Linux within F5OS, ensuring test pipeline backward compatibility.</li>
+               <li>SME in the development, triage, and maintenance of the general F5OS build verification pipeline.</li>
             </ul>
-            <p><strong>Accomplishments:</strong></p>
+            <p><strong>Key Accomplishments:</strong></p>
             <ul>
-               <li>Developed 60+ new Python integration tests for F5OS or BIG-IP products.</li>
-               <li>These tests & scripts that I independently wrote and designed have been run 50,000+ times across various pipelines.</li>
-               <li>Added 100+ new methods to core libraries.</li>
-               <li>Found & filed 50+ product bugs; verified fixes for 100+ bugs.</li>
-               <li>Architected high-priority test pipeline integrations requiring collaboration across teams.</li>
-               <li>Recognized through BEF5 Recognition program 10 times over the span of the first year.</li>
+               <li>Developed 70+ new Python integration tests for F5OS and BIG-IP products.</li>
+               <li>Tests and scripts independently designed have been executed 150,000+ times across various pipelines.</li>
+               <li>Added 100+ new methods to core libraries, enhancing team productivity.</li>
+               <li>Found and filed 150+ product bugs; verified fixes for 200+ bugs.</li>
+               <li>Architected high-priority test pipeline integrations requiring cross-team collaboration.</li>
+               <li>Recognized through BEF5 Recognition program 10 times within first year.</li>
             </ul>
-            <p><strong>Test Development and Maintenance:</strong></p>
+            <p><strong>Test Development and Coverage:</strong></p>
             <ul>
-               <li>Covered features including Modular BIG-IP tenant (Next), High-Availability Testing, Classic BIG-IP tenant testing (CBIP), OS installations, orchestration (docker, kubernetes, openshift), F5OS API (restconf), traffic performance, GUI testing, FPGAs, DDM, DAG Testing, and authentication/security.</li>
+               <li>Comprehensive test coverage including: Modular BIG-IP tenant (Next), High-Availability Testing, Classic BIG-IP tenant testing (CBIP), OS installations, orchestration (Docker, Kubernetes, OpenShift), F5OS API (RESTCONF), traffic performance, GUI testing, FPGAs, DDM, DAG Testing, and authentication/security.</li>
             </ul>
             <p><strong>Build Verification Pipeline:</strong></p>
             <ul>
-               <li>Played a key role in developing a new build verification pipeline required for all F5OS developers.</li>
-               <li>Implemented an automated recovery process for build verification pipeline failures.</li>
-               <li>Became an SME in test pipeline template JSON development and maintenance.</li>
-               <li>Debugged complex log files of failed build pipelines, determining root causes and fixing automation quickly.</li>
+               <li>Key contributor to the new build verification pipeline required for all F5OS developers.</li>
+               <li>Implemented automated recovery processes for build verification pipeline failures.</li>
+               <li>SME in test pipeline template JSON development and maintenance.</li>
+               <li>Expert in debugging complex log files, quickly determining root causes and implementing fixes.</li>
             </ul>
             <p><strong>Internal Tool Development:</strong></p>
             <ul>
                <li>Created multiple dashboards for monitoring device health and build pipeline results.</li>
-               <li>Deployed these dashboards as Dockers created with JS/HTML, Python/Flask, and SQL DB.</li>
-               <li>Built tools to visualize pipeline failures and known bugs.</li>
-               <li>These dashboards were self-initiated projects to speed up manual work.</li>
+               <li>Deployed containerized dashboards using Docker, built with JavaScript/HTML, Python/Flask, and SQL databases.</li>
+               <li>Developed visualization tools for pipeline failures and known bug tracking.</li>
+               <li>Self-initiated these projects to automate manual processes and improve team efficiency.</li>
             </ul>
-            <p><strong>New Skills:</strong></p>
+            <p><strong>Technical Growth:</strong></p>
             <ul>
-               <li>Learned the rSeries & VELOS products by spending countless hours in the F5OS shell & CLI debugging networking, hardware, OS installation, kubernetes/docker issues, and more.</li>
-               <li>Learned how to setup & debug traffic between systems, switches, & hypervisors.</li>
-               <li>Became skilled at using Postman for API testing and new test automation development.</li>
+               <li>Deep expertise in rSeries & VELOS products through extensive hands-on debugging in F5OS shell & CLI.</li>
+               <li>Proficient in networking, hardware troubleshooting, OS installation, and container orchestration.</li>
+               <li>Expert in traffic setup and debugging between systems, switches, and hypervisors.</li>
+               <li>Advanced skills in API testing and automation development using Postman and RESTCONF.</li>
             </ul>
             </p> 
             <h2 class="major">VS&Co.</h2>
